--- a/doc/final_submission.ipynb
+++ b/doc/final_submission.ipynb
@@ -172,17 +172,17 @@
     "![Baseline Model Results](img/baseline_results.png)\n",
     "\n",
     "\n",
-    "Ultimately, we selected the model with the highest validation accuracy, which was logistic regression in this case. We then will see how the model performs on the test set. Due to the elimination style during playoffs of the World Cup, there are no draws in these playoff matches. We attempted three different approaches to predicting the outcome of theese playoff matches. \n",
+    "Ultimately, we selected the model with the highest validation accuracy, which was logistic regression in this case. We then will see how the model performs on the test set. In the knockout stages of the World Cup, there are no draws. We attempted three different approaches to predicting the outcome of these knockout stages matches. \n",
     "\n",
-    "The first approach is to predict the outcome at 90 minutes (when a regular game ends so that our train set and test set are more \"similar\" to each other) before accounting for penalty kicks and overtime, allowing the model which trained on the training set to also predict draws in the playoff matches of the World Cup. \n",
+    "The first approach is to predict the outcome at 90 minutes (when a regular game ends so that our train set and test set are more \"similar\" to each other) before accounting for penalty kicks and overtime, allowing the model which trained on the training set to also predict draws in the knockout stages matches of the World Cup. \n",
     "\n",
-    "In the second approach, we will predict the outcome at the end of the match; for a playoff match, if the model predicts a draw as most likely, then we instead predict the second most likely outcome of that match. We call this approach the \"Softmax Approach\". \n",
+    "In the second approach, we will predict the outcome at the end of the match; for a knockout stage match, if the model predicts a draw as most likely, then we instead predict the second most likely outcome of that match. We call this approach the \"Softmax Approach\". \n",
     "\n",
-    "The third approach also attempts to predict the outcome at the end of the match. Instead of just predicting the second most likely outcome for a playoff match, we instead just train another model specifically on past World Cup playoff matches on the final outcome of these matches. We then just use this model to predict the playoff matches while the model trained on the training set will predict the preliminaries match. Since we have limited amount of past World Cup playoff matches (only 24 matches because some of them were removed to accomodate the team ratings dataset), we trained a basic logistic regression model as this model in the baseline model case. We call this approach the \"WC Playoff Model\". \n",
+    "The third approach also attempts to predict the outcome at the end of the match. Instead of just predicting the second most likely outcome for a knockout stage match, we instead just train another model specifically on past World Cup knockout stages matches on the final outcome of these matches. We then just use this model to predict the knockout stages matches while the model trained on the training set will predict the preliminaries match. Since we have limited amount of past World Cup knockout stages matches (only 24 matches because some of them were removed to accomodate the team ratings dataset), we trained a basic logistic regression model as this model in the baseline model case. We call this approach the \"WC Knockout Stages Model\". \n",
     "\n",
     "![Baseline Test Results](img/baseline_test_results.png)\n",
     "\n",
-    "Impressive! The baseline model gave us an indea on what accuracy our more advanced model should hope to achieve. In this case the Softmax approach did better than the WC Playoff Model approach; this might be due to the small training set for the playoff matches, the small number of features, or just pure luck. \n",
+    "Impressive! The baseline model gave us an indea on what accuracy our more advanced model should hope to achieve. In this case the Softmax approach did better than the WC Knockout Stages Model approach; this might be due to the small training set for the knockout matches, the small number of features, or just pure luck. \n",
     "\n",
     "We did some basic analysis to see what exactly the model is getting wrong by plotting some confusion matrices. \n",
     "\n",
@@ -192,7 +192,7 @@
     "\n",
     "We see that across train set and test set, the proportions in each entry of the confusion matrices are approximately the same, which is good. This might be an indication that our train and test sets are approximately similar. \n",
     "\n",
-    "While it seems like because the accuracy in predicting home loss and home win in the 90 minutes model are higher than those in the softmax approach, we must remember that the true labels of the former approach and the latter two approaches are different, where all the draws in the playoff matches of the test set became either home losses or wins. As a result, the overall accuracy of the the softmax approach is still higher than the former approach despite having lower home loss and home win accuracies; thus we can only compare the overall accuracies of the former approach with the latter two approaches. We can still compare the home loss and home win accuracies between the latter two approaches though since they are using the same test labels, and we see that while the WC Playoff Model is better at predicting home losses, it is worse in predicting home wins by a larger magnitude, resulting in lower overall accuracy. \n",
+    "While it seems like because the accuracy in predicting home loss and home win in the 90 minutes model are higher than those in the softmax approach, we must remember that the true labels of the former approach and the latter two approaches are different, where all the draws in the knockout stages matches of the test set became either home losses or wins. As a result, the overall accuracy of the the softmax approach is still higher than the former approach despite having lower home loss and home win accuracies; thus we can only compare the overall accuracies of the former approach with the latter two approaches. We can still compare the home loss and home win accuracies between the latter two approaches though since they are using the same test labels, and we see that while the WC Knockout Stages Model is better at predicting home losses, it is worse in predicting home wins by a larger magnitude, resulting in lower overall accuracy. \n",
     "\n",
     "More importantly, we were curious just how important each feature is, especially the FIFA ranking feature, the one feature we are trying to replace. Feature importance of random forest allows us exactly to do so, and since it has similar performance to logistic regression in the train/validation set, we can utilize it in this case.\n",
     "\n",
@@ -216,7 +216,7 @@
     "\n",
     "We choose the final model to be the one with the highest validation score, which is LDA in this case.\n",
     "\n",
-    "Similar to before, we used three different approaches to predict the test set. For the WC Playoff Model approach, we continue to use logistic regression. \n",
+    "Similar to before, we used three different approaches to predict the test set. For the WC Knockout Stages Model approach, we continue to use logistic regression. \n",
     "\n",
     "![LDA scores](img/lda_scores.png)\n",
     "\n",
@@ -241,9 +241,9 @@
     "\n",
     "* Stacking Model Test Score at end (Softmax): 0.625 \n",
     "\n",
-    "* Stacking Model Test Score at end (WC Playoff Model): 0.640625 \n",
+    "* Stacking Model Test Score at end (WC Knockout Stages Model): 0.640625 \n",
     "\n",
-    "It seems that stacking in this case did not really help that much. The test accuarcies are still decent though, higher than those of the baseline model.\n",
+    "It seems that stacking in this case did not really help that much. The test accuracies are still decent though, higher than those of the baseline model.\n",
     "\n",
     "As mentioned before, we are a bit concerned about the fact that our features are highly correlated, which potentially affects our predictions.\n",
     "\n",
@@ -251,7 +251,7 @@
     "\n",
     "Principal Component Analysis (PCA) is a way to reduce the dimensionality of dataset by summarizing the variation in our data into a set of new predictors called principal components. These principal components are linear combinations of our original predictors. By selecting the top few principal components, we are projecting our dataset into the space defined by these components. This means that we are projecting our dataset onto a space of smaller dimensionality. Importantly, this will help us reduce the multicollinearity that might be affecting our predictions. Each principal component is constructed such that they are orthogonal with each other. Nonetheless, we understand that this will limit the interpretability of our coefficients.\n",
     "\n",
-    "Principal Component Regression (PCR) is basically using the new predictors of reduced dimensionality in a regression problem. In this problem, we inputed the new principal components into our standard logistic regression. In order to decide the number of principal components to keep, we cross-validated the number of principal components that gives us the best validation accuracy. For the WC Playoffs Model, we will also use PCA to find the number of components that maximizes the train accuracy and fit a PCR model to the World Cup playoffs data. \n",
+    "Principal Component Regression (PCR) is basically using the new predictors of reduced dimensionality in a regression problem. In this problem, we inputed the new principal components into our standard logistic regression. In order to decide the number of principal components to keep, we cross-validated the number of principal components that gives us the best validation accuracy. For the WC Knockout Stages Model, we will also use PCA to find the number of components that maximizes the train accuracy and fit a PCR model to the World Cup knockout stages data. \n",
     "\n",
     "![PCR Plot](img/pcr_plot.png)\n",
     "\n",
@@ -267,13 +267,13 @@
     "\n",
     "* PCR (Best) Test Score at end (Softmax): 0.578125 \n",
     "\n",
-    "* PCR (Best) Test Score at end (WC Playoffs Model): 0.609375 \n",
+    "* PCR (Best) Test Score at end (WC Knockout Stages Model): 0.609375 \n",
     "\n",
     "In this case, PCR was not a good option. The test accuracy decreased quite significantly. We may need to take into the account the outcome as well when we reduce the dimension of our feature set.\n",
     "\n",
-    "### Partial Least Squares Regression\n",
+    "### Partial Least Squares Discriminant Analysis\n",
     "\n",
-    "Another way that can help us deal with the issues of multicollinearity in our dataset is Partial Least Squares Regression (PLSR). Similar to PCA, PLSR involves projecting the predictors onto orthogonal components. However, the PLSR components are constructed such that they not only approximate the predictors, but are also well correlated with the response. As such, we assume that both the predictors and the response are functions of (reduced) principal components. In this problem, our response variable is a multi-class categorical variable. As such, we could use the PLS2 algorithm which simultaneously decomposes on the multi-class variable directly. We could also use the PLS1 algorithm on each category in our response variable separately. \n",
+    "Another way that can help us deal with the issues of multicollinearity in our dataset is Partial Least Squares Regression (PLSR). Similar to PCA, PLSR involves projecting the predictors onto orthogonal components. However, the PLSR components are constructed such that they not only approximate the predictors, but are also well correlated with the response. As such, we assume that both the predictors and the response are functions of (reduced) principal components. In this problem, our response variable is a multi-class categorical variable. As such, we could use the PLS2 algorithm which simultaneously decomposes on the multi-class variable directly. We could also use the PLS1 algorithm on each category in our response variable separately. These algorithms are also referred to as Partial Least Squares Discriminant Analysis (PLS-DA).\n",
     "\n",
     "To demonstrate how the Partial Least Squares algorithms works, we have included a pseudo-code for PLS1:\n",
     "\n",
@@ -329,7 +329,7 @@
     "\n",
     "![PLS 2](img/pls-da2.png)\n",
     "\n",
-    "For the WC Playoffs Model, we will also fit the PLS model with number of components that maximizes the train accuracy. In the case of binary labels, PLS1-DA and PLS2-DA are the same, so we only have one result for the WC Playoffs Model.\n",
+    "For the WC Knockout Stages Model, we will also fit the PLS model with number of components that maximizes the train accuracy. In the case of binary labels, PLS1-DA and PLS2-DA are the same, so we only have one result for the WC Knockout Stages Model.\n",
     "\n",
     "* PLS1-DA (Best) Test Score at 90 mins: 0.640625 \n",
     "\n",
@@ -339,7 +339,7 @@
     "\n",
     "* PLS2-DA (Best) Test Score at end (Softmax): 0.625 \n",
     "\n",
-    "* PLS1-DA/PLS2-DA (Best) Test Score at end (WC Playoffs Model): 0.65625\n",
+    "* PLS1-DA/PLS2-DA (Best) Test Score at end (WC Knockout Stages Model): 0.65625\n",
     "\n",
     "Compared to the full model, we do not see much change in the PLS1-DA model on the test set while we see a decrease in performance of PLS2-DA on the test set, although PLS1-DA does perform better in the second approach than the full model does; thus PLS1-DA is the best model we have seen so far! What's more important is that the validation scores for PLS1-DA were higher than those in the full model. It is likely that multicollinearity was causing the decrease in our validation scores.\n",
     "\n",
@@ -357,7 +357,7 @@
     "\n",
     "Compared to the baseline model, it seems that the model is better in predicting when \"home\" team loses in the test set in all three approaches. This might be due to some bias of how we feature engineer. Since none of us really were experts in soccer, we chose features that we observed from the World Cup alone, so these features might be biased toward the test set.\n",
     "\n",
-    "The Softmax approach had higher home loss and home win accuracies than the WC Playoff Model approach; this might be due to the small training set for the playoff matches, so we could just be overfitting to the traing set. As mentioned in the baseline model, we cannot really compare the confusion matrices of the three approaches to the test set, as the true labels between the 90 minutes approach are different from those than the true labels in the other two approaches."
+    "The Softmax approach had higher home loss and home win accuracies than the WC Knockout Stages Model approach; this might be due to the small training set for the knockout stages matches, so we could just be overfitting to the traing set. As mentioned in the baseline model, we cannot really compare the confusion matrices of the three approaches to the test set, as the true labels between the 90 minutes approach are different from those than the true labels in the other two approaches."
    ]
   },
   {
@@ -366,7 +366,7 @@
    "source": [
     "# Bonus: Neural Network on Small Training Set\n",
     "\n",
-    "Out of plain curiosity, we wondered how a simple neural network would perform on our problem (Everyone wants to try deep learning nowadays). Because our training set is so small, we do not believe that the neural network will outperform any of our models from the previous part. In fact, it might overfit to the training set and perform worse than our other models. This notebook is just to experiment around with neural networks and see its performance on a small dataset. We will only look at the outcome at 90 minutes and Softmax in the test set, since it would be pretty complicated to come up with a scheme for the WC Playoff Model configuration, especially since there are so few WC playoff matches in our dataset.\n",
+    "Out of plain curiosity, we wondered how a simple neural network would perform on our problem (Everyone wants to try deep learning nowadays). Because our training set is so small, we do not believe that the neural network will outperform any of our models from the previous part. In fact, it might overfit to the training set and perform worse than our other models. This notebook is just to experiment around with neural networks and see its performance on a small dataset. We will only look at the outcome at 90 minutes and Softmax in the test set, since it would be pretty complicated to come up with a scheme for the WC Knockout Stages Model configuration, especially since there are so few WC knockout stages matches in our dataset.\n",
     "\n",
     "Our simple neural network had a total of 3 hidden node layers, with 15 nodes in each layer. We added regularization on each layer and also add drop out layers to try to prevent overfitting.\n",
     "\n",
