--- a/doc/final_submission.ipynb
+++ b/doc/final_submission.ipynb
@@ -320,6 +320,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Beyond Baseline\n",
+    "\n",
     "### Modeling with Feature Engineered Features\n",
     "\n",
     "Code for advanced models is available in this [notebook](https://github.com/AC209aWC2018/World-Cup-2018/blob/master/models/beyond_baseline.ipynb)\n",
@@ -501,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Results\n",
+    "# Results Summary\n",
     "\n",
     "Putting all the model results together, we obtain the following table of scores. \n",
     "\n",
@@ -509,7 +511,7 @@
     "\n",
     "For the advanced models, we choose PLS1-DA as our final model given the highest validation score across these advanced models. In fact, this final model also resulted in significant improvements over the baseline model for all different approaches of evaluating the test set, World Cup 2018. Based on the Softmax approach, which resembles World Cup format most closely, the improvement has gone from 59.4% to 68.8%! \n",
     "\n",
-    "Since for this best model we aggregated the features together through dimensionality reduction to alleviate multicollinearity, we cannot comment on which advanced features have directly helped the improvement on the model. Based on our EDA analysis and feature importance produced by Random Forest as a proxy, we believe this improvement is a result of features such as, GDP within confedenration, momentum, wage and goalkeeper ratings. In fact, these along with other team ratings statistics are shown to be highly correlated with the predictor variable and are ranked high in feature importance. \n",
+    "Since for this best model we aggregated the features together through dimensionality reduction to alleviate multicollinearity, we cannot comment on which advanced features have directly helped the improvement on the model. Based on our EDA analysis and feature importance produced by Random Forest as a proxy, we believe this improvement is a result of features such as, GDP per capita both overall and within confedenration, momentum, wage and goalkeeper ratings. In fact, these along with other team ratings statistics are shown to be highly correlated with the predictor variable and are ranked high in feature importance. \n",
     "\n",
     "However, one concerning part noted is that validation score of the baseline is higher than our advanced models, which is perhaps caused by these advanced features. In fact, we have come up with these features based on World Cup matches that we saw, biasing the advanced models more towards World Cup matches, hurting them during validation which contains more casual matches, such as friendlies, possibly affected by different factors. Nonetheless, these priors seem to hold for more serious matches, such as World Cups, based on our observations, resulting in a significant improvement using our final advanced model."
    ]
@@ -518,7 +520,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusions and Summary\n",
+    "# Project Summary and Conclusions\n",
+    "\n",
+    "## Conclusions and Summary\n",
     "\n",
     "In this project we explored the idea of predicting the 2018 World Cup through a data science approach. We collected data related to matches, team and player ratings, and FIFA rankings. We use international matches starting from 2006 as our training set. However, due to the limitations of the sofifa dataset, we had to get rid of many matches when merging with the matches dataset with the sofifa dataset. Nonetheless, as we have already explained, this was necessary given that the sofifa dataset is the most comprehensive database on soccer players. The training set has three outcomes, home team loses, draws, or wins. We abuse the terminology 'home' in order to distinguish between teams. As such, even though our dataset designates one team as home team, it does not mean anything. In fact, as each observation in our dataset is a match, any feature we use are actually symmetric in nature. \n",
     "\n",
@@ -526,7 +530,7 @@
     "\n",
     "We wanted to see the reliability of FIFA rankings in determining the relative strength of a team. As such, we built a baseline model consisting of just FIFA rankings, and the attack ratings, defense ratings, midfield ratings, and overall ratings of the teams from the FIFA games. We tried out a variety of classification methods such as logistic regression, linear discriminant analysis, quadratic discriminant analysis, random forest, and XGBoost, using cross-validation to train on the models and ultimately selecting the model with the highest validation accuracy. With this model, we achieved decent predictions on World Cup 2018. Also, with the baseline model, we realized that FIFA rankings do not have that much of an impact on the outcome of the matches, indicating that a model without FIFA rankings can achieve better results than the baseline model if we feature engineer good features.\n",
     "\n",
-    "Through reviewing past works and exploratory data analysis, we decided to use a much broader range of features, such as the average squad age, the GDP of countries on the same continent (proxying for GDP of teams in the same football confederation), a team's playing style and tactics, the momentum of a team from their last few matches, etc. These new features were scraped from different web sources, and subsequently feature engineered on for our predictive model. \n",
+    "Through reviewing past works and exploratory data analysis, we decided to use a much broader range of features, such as the average squad age, the GDP per capita of countries overall and on the same continent (proxying for GDP of teams in the same football confederation), a team's playing style and tactics, the momentum of a team from their last few matches, etc. These new features were scraped from different web sources, and subsequently feature engineered on for our predictive model. \n",
     "\n",
     "Similar to the baseline model, we first tried a variety of classification methods and used cross-validation to train the various models. We then selected the model with the highest validation accuracy to use. With this model, we achieved considerable increases to our test accuracies. In order to further improve the test accuracies, we also experimented with stacking. However, there was no great improvements in test accuracies. This process highlighted to us that we might have to deal with the multicollineariy nature of our features. As such, we utilized dimension reduction techniques to conduct Principal Component Regression and Partial Least Squares Discriminant Analysis. In the end we saw that Partial Least Squares Discriminant Analysis was comparable to the full model, and better in the case of the second approach. \n",
     "\n",
@@ -534,7 +538,7 @@
     "\n",
     "Nonetheless, based on the Softmax approach evaluation we have managed to improve a simple baseline relying on FIFA rankings and some simple statistics from 59.4% accuracy for the World Cup to 68.8% for our best advanced model, PLS1, based on the validation set.\n",
     "\n",
-    "# Future Work\n",
+    "## Future Work\n",
     "\n",
     "As shown, the models we built have already shown decent results, but of course there is always room for improvement. The immediate next step to take is to think of more complex features that might affect the outcome of a match. An important category of features that we feel would greatly improve our model is match statistics, such as in-game possesion, number of shots on target, number of fouls conceded, number of tackles completed, etc. These statistics, as compared to our current data, are more 'raw', as there is no inherent bias in the data. While these data can still be found for club matches, especially for the larger European leagues, it is difficult to be found for international matches, especially for lesser-known teams. \n",
     "\n",
@@ -565,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
