--- a/sofifa/GDP_features.ipynb
+++ b/sofifa/GDP_features.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wikipedia Scraping"
+    "# Wikipedia Scraping for Country Information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unicodedata\n",
+    "from bs4 import BeautifulSoup\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +257,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,17 +268,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "import requests\n",
-    "import pandas as pd\n",
-    "import unicodedata\n",
-    "import re\n",
-    "\n",
     "def get_countries_by_continent():    \n",
+    "    '''\n",
+    "    Scrape wikipedia to get the name of countries grouped by the continent they belong to.\n",
+    "    Returns an object that maps the name country to its continent and a list of continents\n",
+    "    '''\n",
     "    url = \"https://simple.wikipedia.org/wiki/List_of_countries_by_continents\"\n",
     "    my_page = requests.get(url)\n",
     "    soup = BeautifulSoup(my_page.content, \"lxml\")\n",
@@ -298,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +335,7 @@
        " 'Australasian']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,17 +345,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# country_to_continent"
+    "We want to ensure that the country names that we get from wikipedia properly map to the country names in the dataset. More specifically, we want to ensure that all the countries that show up in the dataset also appear in the country_to_continent object."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,15 +371,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Get set of countries\n",
-    "my_set = set()\n",
-    "for k,_ in country_to_continent.items():\n",
-    "    my_set.add(k)"
+    "We run the following lines to print out all the countries that aren't mapped correctly and manually fix them with the above code. "
    ]
   },
   {
@@ -381,7 +383,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# my_set"
+    "#Get set of countries\n",
+    "my_set = set()\n",
+    "for k,_ in country_to_continent.items():\n",
+    "    my_set.add(k)"
    ]
   },
   {
@@ -402,48 +407,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Ensure all countries properly mapped\n",
     "for c in relevant_countries:\n",
     "    if c not in my_set:\n",
     "        print(c)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now, all the countries are properly mapped. Next, we want to find the GDP per capita of each country for a particular year."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def scrape_gdp_pp():\n",
-    "    url = \"https://en.wikipedia.org/wiki/List_of_countries_by_GDP_(PPP)_per_capita\"\n",
-    "    my_page = requests.get(url)\n",
-    "    soup = BeautifulSoup(my_page.content, \"lxml\")\n",
-    "    tables = soup.find_all('table',{'class':'wikitable sortable'})\n",
-    "    country_rows = tables[0].findAll('tr')\n",
-    "    countries_data = {}\n",
-    "\n",
-    "    for country in country_rows[1:]:    \n",
-    "        country_data = country.findAll('td')\n",
-    "        name = country_data[1].text\n",
-    "        country_name = unicodedata.normalize(\"NFKD\", name)\n",
-    "        country_name = country_name.strip()\n",
-    "        gdp_pp = int(country_data[2].text.strip().replace(',',''))\n",
-    "\n",
-    "        countries_data[country_name] = gdp_pp\n",
-    "\n",
-    "    return countries_data"
+    "First, we create a mapping of country names, this time with a function so that it can easily be used inside another function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,13 +443,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since our dataset has matches starting from 2006, we want to collect GDP of countries from 2006 onwards since GDP may change over the years. We will use the year data to synchronize with match date later."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def scrape_gdp_pp_by_year():\n",
-    "    # {(2010) -> {(US) -> 300k}}\n",
+    "    '''\n",
+    "     Scrape GDP per capita by year. \n",
+    "     Returns: (1) an object that maps the year to an object which maps the country name to its GDP\n",
+    "     for example: {(2010) -> {('US') -> 60000}} and (2) the set of countries so we can check that all relevant \n",
+    "     countries' data have been collected.\n",
+    "    '''\n",
+    "    \n",
     "    gdp_date_obj = {}\n",
     "\n",
     "    url = \"https://en.wikipedia.org/wiki/List_of_countries_by_past_and_projected_GDP_(nominal)_per_capita\"\n",
@@ -472,11 +471,16 @@
     "    soup = BeautifulSoup(my_page.content, \"lxml\")\n",
     "    sections = soup.find_all('h2')\n",
     "\n",
+    "    # The wiki page divides the GDP data for years that we want into 2 different tables so we will have to process \n",
+    "    # the tables one at a time\n",
+    "    \n",
+    "    # First table\n",
     "    years = [2006,2007,2008,2009]\n",
     "    header1 = sections[3]\n",
     "    all_countries1 = header1.find_next('table').find_next('table').find_next('table').find_all('td')\n",
     "    \n",
     "    country_set = set()\n",
+    "    # Variables to skip over irrelevant table sections\n",
     "    offset = 4\n",
     "    interval_sz = 11\n",
     "    for i in range(0, len(all_countries1), interval_sz):\n",
@@ -485,6 +489,8 @@
     "        country_name = unicodedata.normalize(\"NFKD\", name)\n",
     "        country_name = country_name.strip()\n",
     "        country_name = map_countries(country_name,mapping)\n",
+    "        \n",
+    "        # Discard the country if it is not in the dataset\n",
     "        if country_name not in relevant_countries:\n",
     "            continue\n",
     "\n",
@@ -507,7 +513,8 @@
     "    header = sections[4]\n",
     "    all_countries = header.find_next('table').find_next('table').find_next('table').find_all('td')\n",
     "    \n",
-    "\n",
+    "    \n",
+    "    # Second table\n",
     "    years = [2010,2011,2012,2013,2014,2015,2016,2017,2018]\n",
     "    interval_sz = 11\n",
     "    for i in range(0, len(all_countries), interval_sz):\n",
@@ -538,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,8 +553,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check that each country has a GDP value for each year"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +581,7 @@
        "{'Ireland', 'Monaco', 'Réunion', 'Scotland', 'Wales'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,8 +595,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some countries just dont have GDP information recorded on Wikipedia. Not much we can do about that in terms of code, so we manually look up their GDP values (except for Ireland which we just set it equal to Northern Ireland). We're not able to find it by year for these countries so we will just use the same value for all years, which should be okay since they aren't that significant in World Cup anyway."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,23 +629,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we're done with the pre-processing and data collection and it's time to synchronize with our dataset and build out our features. Since we already have a mapping of country to continent, we will also create another feature as well to be an indicator of some form of home team advantage. We will give a country a home team advantage if they are either the host or they are from the same continent as the host (while the other team is not). \n",
+    "\n",
+    "Therefore, in total, we will create 3 features: (1) Raw GDP difference, (2) Log of GDP ratio of the 2 teams within the same continent*, (3) Indicator of home team advantage.\n",
+    "\n",
+    "*GDP ratio is not symmetric around 0, since using the ratio cannot produce any negative values. To ensure that 0 encodes lack of information and that team 1 and team 2 are evaluated in the same when swapping the tag, we induce symmetry by logging the ratio.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a column of GDP difference corresponding to that year\n",
-    "\n",
-    "\n",
-    "gdp_col_train = []\n",
-    "home_team_train = []\n",
+    "# Raw gdp difference\n",
     "raw_gdp_train = []\n",
+    "# GDP within same continent\n",
+    "gdp_col_train = []\n",
+    "# Indicator of home team advantage\n",
+    "home_team_train = []\n",
+    "\n",
     "\n",
     "\n",
     "for team1, team2, date, home, neutral in zip(train['home_team'], train['away_team'],train['game_date'], train['country'],train['neutral']):\n",
     "\n",
     "    date = int(date.split('-')[0])\n",
     "    if country_to_continent[team1] != country_to_continent[team2]:\n",
+    "        # if not from same continent, set to 0\n",
     "        gdp_col_train.append(0)    \n",
     "    else:\n",
     "        gdp_col_train.append(np.log(gdp_date_obj[date][team1]/gdp_date_obj[date][team2]))\n",
@@ -649,23 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# train.loc[train['neutral']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,14 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +703,7 @@
        "(42, 298)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -917,7 +928,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,8 +938,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we do the same for the test set."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +986,7 @@
        "64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -992,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1019,7 @@
        "26"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -1544,7 +1562,7 @@
        "[64 rows x 4 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,27 +1573,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "train.to_csv('../data/train_gdp.csv', index = False)\n",
     "test.to_csv('../data/test_gdp.csv', index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1594,7 +1598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
