--- a/sofifa/momentum.ipynb
+++ b/sofifa/momentum.ipynb
@@ -678,6 +678,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want to calculate the momentum of teams since it can be a good indicator of current form. To do so, we want to keep track of how many wins the team got in the past x games as well as the win and lose momentums. They are defined below, where norm_rating is the normalized rating of a team (from 0 to 1).  The features are split into win and loss momentums instead of summing them up and combining them into one feature. This is because if we were to make it into one feature, then winning against a strong team and then losing against a weak team would cancel each other out arithmetically, when in reality, the momentum from the win/loss outcomes may not be symmetrical."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\text{win_momentum} = \\sum_{i=1}^{n} (1)*\\text{norm_rating} $$\t\n",
+    "$$\\text{lose_momentum} = \\sum_{i=1}^{n} (-1)*(\\text{1-norm_rating}) $$\t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additionally, since it is unclear how many games in the past we want to look at, we will collect the data for 1-5 past games and let our model decide which to keep. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -689,6 +711,9 @@
     "    Get number of wins for home team and away team as well as win and lose momentum for num_games before current game. Also includes \n",
     "    indicators of whether the team has played enough games (for the matches in the beginning). If against_each_other\n",
     "    is True, get number of wins home team has against away team had in past num_games.\n",
+    "    \n",
+    "    If against_each_other is False, it will return a tuple of data in this order: \n",
+    "    (home_wins, away_wins,home_win_momentum,home_lose_momentum,away_win_momentum,away_lose_momentum)\n",
     "    \n",
     "    \"\"\"\n",
     "\n",
@@ -706,18 +731,23 @@
     "                             & (df.game_date < df_row.game_date)][-num_games:]        \n",
     "       \n",
     "        \n",
-    "        #get number of wins for home team \n",
+    "        #get number of wins for home team (team1)\n",
     "        home_wins = 0\n",
+    "        # get win and lose momentum for home team (team1)\n",
     "        home_win_momentum = 0\n",
     "        home_lose_momentum = 0\n",
     "        for index, game in home_past_games.iterrows():\n",
     "            if game[home_team_id_colname] == df_row[home_team_id_colname]:\n",
+    "                # if team1 is listed as the home team for this particular match, then home_win would be 1 if \n",
+    "                # this team won.\n",
     "                if game.home_win == 1:\n",
     "                    home_wins += 1\n",
     "                    home_win_momentum += df_row['y_rating']/100\n",
     "                else:\n",
     "                    home_lose_momentum -= (1-df_row['y_rating']/100)\n",
     "            elif game[away_team_id_colname] == df_row[home_team_id_colname]:\n",
+    "                # if team1 is listed as the away team for this particular match, then home_win would be 0 if \n",
+    "                # this team won.                \n",
     "                if game.home_win == 0:\n",
     "                    home_wins += 1\n",
     "                    home_win_momentum += df_row['x_rating']/100\n",
@@ -726,8 +756,9 @@
     "\n",
     "        \n",
     "\n",
-    "        #get number of wins for away team         \n",
+    "        #get number of wins for away team (team2)      \n",
     "        away_wins = 0\n",
+    "        # get win and lose momentum for away team (team2)\n",
     "        away_win_momentum = 0\n",
     "        away_lose_momentum = 0\n",
     "        for index, game in away_past_games.iterrows():\n",
@@ -751,7 +782,7 @@
     "        if len(away_past_games) != 0:\n",
     "            away_wins = away_wins / len(away_past_games)\n",
     "        return (home_wins, away_wins,home_win_momentum,home_lose_momentum,away_win_momentum,away_lose_momentum)\n",
-    "#         return (home_wins, away_wins, len(home_past_games), len(away_past_games))\n",
+    "\n",
     "    else:\n",
     "        #get past games where the two teams played against each other\n",
     "        past_games = df[(((df[home_team_id_colname] == df_row[home_team_id_colname])\\\n",
@@ -769,8 +800,7 @@
     "                wins += 1\n",
     "        if len(past_games) != 0:\n",
     "            wins = wins / len(past_games)\n",
-    "        return (wins)\n",
-    "#         return (wins, len(past_games))"
+    "        return (wins)\n"
    ]
   },
   {
@@ -788,7 +818,6 @@
     "            wins_past_x_games[i] = []\n",
     "            win_momentum_past_x_games[i] = []\n",
     "            lose_momentum_past_x_games[i] = []            \n",
-    "        # results = (home_wins, away_wins,home_win_momentum,home_lose_momentum,away_win_momentum,away_lose_momentum)\n",
     "        results = get_wins_in_last_matches(row, train_sorted, i)\n",
     "\n",
     "        # these stats are saved in (home,away) format\n",
@@ -1501,7 +1530,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#func12\n",
+    "\n",
     "wins_past_x_games = {}\n",
     "win_momentum_past_x_games = {}\n",
     "lose_momentum_past_x_games = {}\n",
@@ -1872,15 +1901,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test_final"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
@@ -2008,7 +2028,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
